@@ -1,7 +1,7 @@
 AUX app.ini 718 BLAKE2B 6d8abd16cc2eb522e5111d4874692a37698e59ed3db0d2072572f4ab7b6edcabe890aa9129beba932dadd9340e8d5491289ec562f1f9e7ac864fcc89d8389147 SHA512 5d2a6664c5b0bff5d1eeab2a07b7246230837273decaabbe6376b7315c18a897887530b1fdd7cd68eea9c6ffac90ef90d6769ef15e75129d6b67a0ca0ec775a5
-AUX reposilite-2.9.1.cdn 1662 BLAKE2B ced2d8ef9db30bfba89efe5613bb6c269b78494f5141517557fcc5648684395038b0b1ca60049db6b14c8d65e94bf7e1a8776310d68cde10523dacf106f22ef5 SHA512 5e70568c4813ebde635bda0763494eef6c566246a8077ad73bf1fa394a042548424fe1197f9c6f9ee1c8d053f4da0033778ef846a79850452764aaa2a7719170
+AUX reposilite-2.9.1.cdn 1651 BLAKE2B 39ad2179a6a4d465447f03bdfa39ad7e942bde35b833a7f06befc0fa9f8afb02a87b73faac5a218dc9fe9e2c86757144033254e13929ab3b11165a7dba4d79a0 SHA512 fd1d78f50efc1f9e433a0af5261e45ff30813b988447a7729b694652d6c10da432eee9a12548d9690f57da85d3dd8d7c9ea8e720368e5db9108595eee21b433f
 AUX reposilite.service 533 BLAKE2B 98490e09657c606639239d4da6397c8930cb9731a4637b9af8e59533b264c574d5626c45113aec9b11ba3cec87e7e0a8f743fb6f7cf15f03b835a1e3875cbdc8 SHA512 5687a77b44c538d6ec2da2ac19cc1b05a0fd931b9fcb6bc13016ef4f2601b0bf4a218bcd1e4e56ce892ffb876cd479cbf537dd21920a1178b61cb8de9e31bf64
-AUX reposilite.sh 771 BLAKE2B 88a79837096f9fd3affeb75d2fb907e17aafb4382e9d7d1d06c9c3441e484596e17d4e30ff58e2ea31a6fb3b97c9b8981b8cc993122433fae5e7870a120ee1a3 SHA512 b97f31ac025bda44637812583a60cea6dcb158eebf55c820b3092ed15fe3046bfccb3c0da0456551fe2c362f910431713a425866da26a5ab7ab552304bfa26c6
-EBUILD reposilite-2.9.1.ebuild 1084 BLAKE2B 49017ab2022c252dad1e575b9f26fd22d10072c91814a1277deaf143f5c311861f292ce97de1cf50c9b4110e34f2cb99edd6f97b78b9799099a34e3ecac2246a SHA512 ab780fb09ff19720cd42bca933ddf10d70a68633075000177ee80f90c8a0282d9d13a1d3745508c13ce819999444dba226e2ee24fcaf38564b24444f299ab651
-MISC ChangeLog 283 BLAKE2B 333f8ce11004162da39e91fee30bb35c4debf8c4a58b501988706bdb23e319cd1216ad8516e6ac2199dc2ba2c07c34ee9db38033546b878bbd74b92033b68183 SHA512 bc9b7bf1c759387d8fee63e33919e9eb912ed31b41b97256b9371950004f9174b2e7604a8a360a92d4b3827c47b99ed6d50e45095ea0fb2f9bebd8e339683b00
+AUX reposilite.sh 744 BLAKE2B 524b3120b59b60c01e65654e4c7bf34d359e61b29f0e31a4762fda179c7b61ac91bea91ffb1c9d5d0470e0ae3683cad8ff32086125946c42b08a9fd156f65f10 SHA512 c781849ae3c116179ee3446ccf8620814514e4128df6cad917a010ffaba9efdd6cddda686a77ef348b80a920cd67b7ba19bc2a62c519ca7a795acdc8cc486c50
+EBUILD reposilite-2.9.1.ebuild 953 BLAKE2B 77a1a44119f5a5fe4e012c0d6f6fbc526ee1466b076ac20653b9c09953141242c1f1f04cc22960de7944f679a5264679df602f369daef159958d8267630e1034 SHA512 44989aa39d1a89d77f5c196b69bafe8397c95f8b59ba5654ebbb1d69981c6d0679b44e0613dd5cd2a8c5812b84f6ea9339c2d2ec5b4c4879b728be480284e9f0
+MISC ChangeLog 450 BLAKE2B ccbc5736ddc2df16901a3f2e733937991383b57a76b87f9da860644e50ad7e730747b2898d1d391de28ba7f479376e02644a2d214f0da915fee2fdf9da8223b0 SHA512 7e2d91d384d3c1af259075a14569b00368a39a0f2154204b67f3c0271eead4f740ded2f71219f32b669e0ee67b8921b533f3d2124b922df460535947ade42e90
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
