@@ -1,3 +1,7 @@
+  08 Oct 2020; Manuel Friedli <manuel@gentoo.org> files/reposilite-2.9.1.cdn,
+  files/reposilite.sh, reposilite-2.9.1.ebuild:
+  dev-util/reposilite: Apply some fixes
+
 *reposilite-2.9.1 (08 Oct 2020)
 
   08 Oct 2020; Manuel Friedli <manuel@gentoo.org> +files/app.ini,
